about information added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi, I am</h3>
-                <h1 class="banner-title">Subarno Ranjan</h1>
+                <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-des">Shot what able cold me see hold. Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
                 <button class="btn-primary">Contact</button>
@@ -37,6 +37,24 @@
              <p class="section-des">
                 I am a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end users. Thousands of client have procured exceptional results. while working with me. Delivering work within time and budget which meets client requirements.
              </p>
+             <div class="about-info-container">
+                <div class="about-info">
+                    <h4 class="info-title">Name:</h4>
+                    <p class="info-des">Mary Hardy</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Email:</h4>
+                    <p class="info-des">info@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">Date of Birth:</h4>
+                    <p class="info-des">4 April 2000</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="info-title">From:</h4>
+                    <p class="info-des">Chattrogram, Bangladesh</p>
+                </div>
+             </div>
         </section>
     </main>
     <footer>
