--- a/index.html
+++ b/index.html
@@ -85,7 +85,54 @@
             </div>
         </div>
     </section>
-   
+    <!-- Resume Section -->
+    <section>
+        <h3 class="section-title">A Summary Of My Resume</h3>
+        <div class="resume-container">
+            <div class="resume-column">
+                <h3 class="resume-column-title">My Education</h3>
+
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resume-item-institue">Harvard University / 2015 - 2017</h3>
+                    <p class="resume-item-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Bachelor in Computer Engineering</h2>
+                    <h3 class="resume-item-institue">Harvard University / 2011 - 2015</h3>
+                    <p class="resume-item-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">St.Tresa High School</h2>
+                    <h3 class="resume-item-institue">12<sup>th</sup>Fail</h3>
+                    <p class="resume-item-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                
+            </div>
+            <div class="resume-column">
+                <h3 class="resume-column-title">My Experience</h3>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resume-item-institue">Harvard University / 2015 - 2017</h3>
+                    <p class="resume-item-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Bachelor in Computer Engineering</h2>
+                    <h3 class="resume-item-institue">Harvard University / 2011 - 2015</h3>
+                    <p class="resume-item-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">St.Tresa High School</h2>
+                    <h3 class="resume-item-institue">12<sup>th</sup>Fail</h3>
+                    <p class="resume-item-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     </main>
     <footer>
 
