--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <!-- Link of font is added here -->
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
+<!-- Adding the CSS file -->
     <link rel="stylesheet" href="styles/portfolio.css">
+ <!-- Adding the Script file of font awesome-->
+ <script src="https://kit.fontawesome.com/14f5eae8bc.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -25,8 +28,8 @@
                 <h3 class="banner-greeting">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-des">Shot what able cold me see hold. Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile-pic" src="images/hardy.png" alt="">
         </div>
@@ -133,7 +136,7 @@
             </div>
         </div>
         <div class="download-cv">
-            <button class="btn-primary">Download CV</button>
+            <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
         </div>
     </section>
     </main>
